--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:recyclerview-v7:27.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-//    compile group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.2.0'
-    compile 'com.github.bumptech.glide:okhttp3-integration:1.5.0' // no @aar
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile group: 'com.github.japgolly', name: 'svg-android', version: '2.0.0'
-    compile 'com.caverock:androidsvg:1.2.1'
+    implementation 'com.caverock:androidsvg:1.2.1'
+    implementation 'com.github.bumptech.glide:glide:3.6.0'
+    implementation 'com.github.japgolly.android:svg-android:2.0.6'
 }
